changed theme to dark

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -3,6 +3,18 @@
 @import url('https://fonts.googleapis.com/css?family=Nunito');
 
 // Variables
+@function color($key: "blue") {
+  @return map-get($colors, $key);
+}
+
+@function theme-color($key: "primary") {
+  @return map-get($theme-colors, $key);
+}
+
+@function gray($key: "100") {
+  @return map-get($grays, $key);
+}
+
 @import 'variables';
 
 // Bootstrap
